1st half of gettiing started

--- a/d2ltvm.bib
+++ b/d2ltvm.bib
@@ -80,3 +80,15 @@
   year		= {2010},
   publisher	= {SAGE Publications Sage UK: London, England}
 }
+
+@inproceedings{Ragan-Kelley.Barnes,Adams.ea.2013,
+ author = {Ragan-Kelley, Jonathan and Barnes, Connelly and Adams, Andrew and Paris, Sylvain and Durand, Fr{\'e}do and Amarasinghe, Saman},
+ title = {Halide: A Language and Compiler for Optimizing Parallelism, Locality, and Recomputation in Image Processing Pipelines},
+ booktitle = {Proceedings of the 34th ACM SIGPLAN Conference on Programming Language Design and Implementation},
+ series = {PLDI '13},
+ year = {2013},
+ location = {Seattle, Washington, USA},
+ pages = {519--530},
+ numpages = {12},
+ publisher = {ACM},
+}
