--- a/d2ltvm.bib
+++ b/d2ltvm.bib
@@ -1,3 +1,4 @@
+
 @Article{	  Chen.Li.Li.ea.2015,
   title		= {MXNet: A flexible and efficient machine learning library
 		  for heterogeneous distributed systems},
@@ -54,9 +55,10 @@
 @InProceedings{	  Jiang.Chen.Li.2018,
   title		= {Efficient Deep Learning Inference on Edge Devices},
   author	= {Jiang, Ziheng and Chen, Tianqi and Li, Mu},
-  booktitle = {SysML Conference},
+  booktitle	= {SysML Conference},
   year		= {2018}
 }
+
 @InProceedings{	  Lai.Seznec.2013,
   title		= {Performance upper bound analysis and optimization of SGEMM
 		  on Fermi and Kepler GPUs},
@@ -81,14 +83,19 @@
   publisher	= {SAGE Publications Sage UK: London, England}
 }
 
-@inproceedings{Ragan-Kelley.Barnes,Adams.ea.2013,
- author = {Ragan-Kelley, Jonathan and Barnes, Connelly and Adams, Andrew and Paris, Sylvain and Durand, Fr{\'e}do and Amarasinghe, Saman},
- title = {Halide: A Language and Compiler for Optimizing Parallelism, Locality, and Recomputation in Image Processing Pipelines},
- booktitle = {Proceedings of the 34th ACM SIGPLAN Conference on Programming Language Design and Implementation},
- series = {PLDI '13},
- year = {2013},
- location = {Seattle, Washington, USA},
- pages = {519--530},
- numpages = {12},
- publisher = {ACM},
+@InProceedings{	  Ragan-Kelley.Barnes.Adams.ea.2013,
+  author	= {Ragan-Kelley, Jonathan and Barnes, Connelly and Adams,
+		  Andrew and Paris, Sylvain and Durand, Fr{\'e}do and
+		  Amarasinghe, Saman},
+  title		= {Halide: A Language and Compiler for Optimizing
+		  Parallelism, Locality, and Recomputation in Image
+		  Processing Pipelines},
+  booktitle	= {Proceedings of the 34th ACM SIGPLAN Conference on
+		  Programming Language Design and Implementation},
+  series	= {PLDI '13},
+  year		= {2013},
+  location	= {Seattle, Washington, USA},
+  pages		= {519--530},
+  numpages	= {12},
+  publisher	= {ACM}
 }
